k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staqe-backend
  labels:
    app.kubernetes.io/name: staqe
    app.kubernetes.io/component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: staqe
      app.kubernetes.io/component: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: staqe
        app.kubernetes.io/component: backend
    spec:
      serviceAccountName: staqe-backend
      containers:
        - name: staqe
          image: ghcr.io/mondata-dev/staqe-backend:latest
          ports:
            - name: http
              containerPort: 3300
              protocol: TCP
          resources:
            limits:
              memory: 1Gi
              cpu: '1'
