k8s/node-history-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: staqe-node-history
  labels:
    app.kubernetes.io/name: staqe-node-history
    app.kubernetes.io/component: history-node
spec:
  serviceName: staqe-node-history
  replicas: 1
  minReadySeconds: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: staqe-node-history
      app.kubernetes.io/component: history-node
  template:
    metadata:
      labels:
        app.kubernetes.io/name: staqe-node-history
        app.kubernetes.io/component: history-node
    spec:
      containers:
        - name: staqe-node-history
          image: ghcr.io/nimiq/core-rs-albatross:latest
          volumeMounts:
            - name: storage
              mountPath: /home/nimiq/.nimiq
            - name: staqe-node-volume
              mountPath: /home/nimiq/.nimiq/client.toml
              subPath: client.toml
            - name: staqe-node-volume
              mountPath: /home/nimiq/liveness.sh
              subPath: liveness.sh
          ports:
            - name: consensus
              containerPort: 8443
              protocol: TCP
            - name: rpc
              containerPort: 8648
              protocol: TCP
            - name: metrics
              containerPort: 9100
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - bash
                - /home/nimiq/liveness.sh
            initialDelaySeconds: 36000 # 10 hours
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            limits:
              memory: "4Gi"
              cpu: "2"
            requests:
              memory: "2Gi"
              cpu: "1"
      volumes:
        - name: staqe-node-volume
          configMap:
            name: staqe-node-history
  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: hcloud-volumes
        resources:
          requests:
            storage: 50G
