k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: staqe-backend
  labels:
    app.kubernetes.io/name: staqe
    app.kubernetes.io/component: backend
spec:
  ports:
    - port: 3300
      targetPort: 3300
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: staqe
    app.kubernetes.io/component: backend
