k8s/node-history-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  staqe-node-history
  labels:
    app.kubernetes.io/name: staqe-node-history
    app.kubernetes.io/component: history-node
spec:
  ports:
    - port: 8443
      targetPort: 8443
      protocol: TCP
      name: consensus
    - port: 8648
      targetPort: 8648
      protocol: TCP
      name: rpc
    - port: 9100
      targetPort: 9100
      protocol: TCP
      name: metrics
  selector:
    app.kubernetes.io/name: staqe-node-history
    app.kubernetes.io/component: history-node
