k8s/nuxt-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: staqe-nuxt
  labels:
    app.kubernetes.io/name: staqe
    app.kubernetes.io/component: nuxt
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http

  selector:
    app.kubernetes.io/name: staqe
    app.kubernetes.io/component: nuxt
